feat: Implementing candidate update feature
